# alfafuture-hack

./: .gitignore  .pre-commit-config.yaml  README.md
src/backend/: .env.app_config.example  alembic.ini  jwt-private.pem  jwt-public.pem  main.py  pyproject.toml
src/backend/alembic/versions/: d6c83092771a_table_users.py
src/backend/api/: __init__.py
src/backend/api/v1/: __init__.py
src/backend/core/: config.py
src/backend/features/: __init__.py
src/backend/features/chat/api/: chat.py
src/backend/features/chat/crud/: chat.py
src/backend/features/chat/models/: chat.py
src/backend/features/chat/schemas/: chat.py
src/backend/features/chat/service/: chat.py
src/backend/features/chat/validators/: existence.py
src/backend/features/chats/api/: chat.py
src/backend/features/chats/crud/: chat.py
src/backend/features/chats/models/: chat.py
src/backend/features/chats/service/: chat.py
src/backend/features/chats/validators/: __init__.py
src/backend/features/llm/: client.py  context_builder.py  system_prompt.py
src/backend/features/message/api/: message.py
src/backend/features/message/crud/: message.py
src/backend/features/message/models/: message.py
src/backend/features/message/service/: message.py
src/backend/features/messages/api/: message.py
src/backend/features/messages/crud/: message.py
src/backend/features/messages/models/: message.py
src/backend/features/messages/schemas/: __init__.py  message.py
src/backend/features/messages/service/: message.py
src/backend/shared/exceptions/: __init__.py
src/backend/utils/: JWT.py
(+51 files in other folders)
