[project]
name = "alfafuture-hack"
version = "0.1.0"
description = "Copilot web application for Alfa-Bank hackathon — an AI assistant helping microbusiness clients solve business, legal, and financial tasks."
authors = [
    { name = "Mikhail Khorokhorin", email = "mikhailkhorokhorin@gmail.com" },
    { name = "Timofey Pupykin", email = "pupykint@gmail.com" },
    { name = "Robert Savitskas", email = "savrobartrobsav@gmail.com" },
    { name = "Artem Saveliev", email = "whard8y@gmail.com" },
]
license = { text = "GPL v3" }
readme = "../../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.3.3,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
